[metadata]
name = mfranceschi-minesweeper
version = 1.0
author = mfranceschi
author_email = mfranc.martin@gmail.com
description = A cool minesweeper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mfranceschi/Minesweeper
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >= 3.9

[options.packages.find]
where = 

