[metadata]
name = mfranceschi-minesweeper
version = 1.3
author = mfranceschi
description = A cool minesweeper
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/mfranceschi/Minesweeper
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >= 3.9
packages = find:
package_dir = 
  mfranceschi_minesweeper = src

[options.packages.find]
where = src 

