[metadata]
name = mfranceschi-minesweeper
version = 0.2
author = mfranceschi
description = A cool minesweeper
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/mfranceschi/Minesweeper
classifiers = 
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = MIT
license_files = LICENSE.txt
platform = any

[options]
install_requires = 
  pytest==6.2.4
  overrides==6.1.0
packages = find:
package_dir = 
  mfranceschi_minesweeper = mfranceschi_minesweeper
python_requires = >= 3.7

[options.entry_points]
console_scripts =
  mf-mines = mfranceschi_minesweeper.main:main
